--- a/docs/app/css/index.css
+++ b/docs/app/css/index.css
@@ -1,5 +1,6 @@
 body {
     font-family: IBMPlexSans;
+    background: #FAFBFA;
 }
 #outer-frame {
     display: table;
@@ -18,6 +19,9 @@ body {
     padding-bottom: 3em;
     margin: 0;
 }
+code {
+    font-family: IBMPlexMono;
+}
 header {
     text-align: center;
 }
@@ -25,6 +29,7 @@ header {
     margin: 2.5em;
 }
 footer {
+    font-size: 0.9375em;
     text-align: center;
     color: #BFBFBF;
 }
@@ -42,18 +47,32 @@ footer {
 #logo:hover {
     filter: drop-shadow(0px 1px 0.25px rgba(0, 0, 0, 0.45));
 }
-.screen-wrapper {
+.flex-reverse {
     display: flex;
     flex-direction: column-reverse;
+}
+.screen-wrapper {
     box-sizing: border-box;
     min-height: 60vh;
     max-height: 60vh;
     overflow: scroll;
+    position: relative;
     margin-bottom: 1em;
     border-style: solid;
     border-color: grey;
     border-radius: 3px;
     border-width: 1px;
+    background: #F5F5DC;
+}
+.welcome-screen {
+    width: 70%;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+    padding: 2em;
 }
 .screen {
     padding-left: 1em;
@@ -65,8 +84,22 @@ footer {
 }
 .cmdline {
     width: 100%;
-    padding: 3px;
     box-sizing: border-box;
+    padding: 3px;
+    border-style: solid;
+    border-color: grey;
+    border-radius: 3px;
+    border-width: 1px;
     font-family: IBMPlexMono;
     font-size: 1em;
+    background: #F5F5DC;
+}
+@media (min-width: 900px) {
+    .welcome-screen {
+        width: 590px;
+    }
+    .container {
+        margin-left: 12vw;
+        margin-right: 12vw;
+    }
 }
