--- a/docs/app/css/index.css
+++ b/docs/app/css/index.css
@@ -74,6 +74,10 @@ footer {
     box-sizing: border-box;
     padding: 2em;
 }
+.welcome-title {
+    font-size: 1.5em;
+    font-weight: normal;
+}
 .screen {
     padding-left: 1em;
 }
