--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -52,7 +52,7 @@ code {
     width: 100px;
 }
 #logo:hover {
-    filter: drop-shadow(0px 2px 0.5px rgba(0, 0, 0, 0.45));
+    filter: drop-shadow(0px 2px 0.5px rgba(0,0,0,0.45));
 }
 .title {
     font-size: 3.1em;
@@ -71,13 +71,13 @@ code {
 .button {
     /* TODO dark: #303085; */
     background-color: #F5F5DC;
-    border-color: rgba(172, 172, 158, 0.3);
+    border-color: rgba(172,172,158,0.3);
     border-radius: 5px;
     border-style: solid;
     border-width: 1px;
 
     /* TODO no box shadow on dark mode */
-    box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px 0px, rgba(255, 255, 255, 0.25) 0px 1px 0px 0px inset;
+    box-shadow: rgba(27,31,35,0.04) 0px 1px 0px 0px, rgba(255,255,255,0.25) 0px 1px 0px 0px inset;
 
     /* TODO dark: #FFFFFF; */
     color: #000000;
