--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -1,143 +1,98 @@
-body {
-    font-family: IBMPlexSans;
-    background: #FAFBFA;
-}
-#outer-frame {
-    display: table;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0;
-    margin: 0;
-}
-#inner-frame {
-    display: table-cell;
-    vertical-align: middle;
-    padding-top: 3em;
-    padding-bottom: 3em;
-    margin: 0;
-}
-code {
-    font-family: IBMPlexMono;
-}
 pre {
-    margin: 0;
-}
-header {
-    text-align: center;
+  margin: 0;
 }
 #logo {
-    height: 70px;
+  height: 50px;
 }
 #logo:hover {
-    filter: drop-shadow(0px 1px 0.25px rgba(0, 0, 0, 0.45));
+  filter: drop-shadow(0px 2px 0.1px rgba(0, 0, 0, 0.1));
 }
 #container {
-    margin: 2em;
-}
-footer {
-    font-size: 0.9375em;
-    text-align: center;
-    color: #BFBFBF;
-}
-.footer-link {
-    color: #BFBFBF;
-    text-decoration: none;
-}
-.footer-link:hover {
-    color: #A0A0A0;
-    text-decoration: underline;
-}
-.flex-reverse {
-    display: flex;
-    flex-direction: column-reverse;
+  margin: 2em;
 }
 #screen-wrapper {
-    box-sizing: border-box;
-    min-height: 60vh;
-    max-height: 60vh;
-    overflow-y: scroll;
-    position: relative;
-    margin-bottom: 1em;
-    border-style: solid;
-    border-color: grey;
-    border-radius: 3px;
-    border-width: 1px;
-    background: #F5F5DC;
+  box-sizing: border-box;
+  height: 75vh;
+  overflow-y: scroll;
+  position: relative;
+  margin-bottom: 1em;
+  border-style: solid;
+  border-color: grey;
+  border-radius: 3px;
+  border-width: 1px;
+  background-color: #F5F5DC;
 }
 #welcome-screen {
-    width: 68%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1em;
+  width: 68%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 1em;
 }
 #welcome-title {
-    font-size: 1.5em;
-    font-weight: normal;
+  font-size: 1.5em;
+  font-weight: normal;
 }
 #screen {
-    padding-top: 1em;
-    padding-left: 1em;
-    padding-right: 1em;
-    margin-bottom: 0.5em;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  margin-bottom: 0.5em;
 }
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
 .entry {
-    font-family: IBMPlexMono;
-    font-size: 1em;
-    word-break: break-all;
-    white-space: break-spaces;
+  font-family: "IBM Plex Mono";
+  font-size: 1em;
+  word-break: break-all;
+  white-space: break-spaces;
 }
 #input-container {
-    display: flex;
+  display: flex;
 	justify-content: flex-start;
 }
 .input-element {
-    font-family: IBMPlexMono;
-    font-size: 1em;
-    background: #F5F5DC;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    border-style: solid;
-    border-color: grey;
-    border-width: 0;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    margin: 0;
+  font-family: "IBM Plex Mono";
+  font-size: 1em;
+  background: #F5F5DC;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  border-style: solid;
+  border-color: grey;
+  border-width: 0;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  margin: 0;
 }
 #prompt {
-    padding-left: 1em;
-    padding-right: 0.5em;
-    border-radius: 3px 0 0 3px;
-    border-left-width: 1px;
+  padding-left: 1em;
+  padding-right: 0.5em;
+  border-radius: 3px 0 0 3px;
+  border-left-width: 1px;
 }
 #input {
-    width: 100%;
-    box-sizing: border-box;
-    padding-left: 0;
-    padding-right: 1em;
-    border-radius: 0 3px 3px 0;
-    border-right-width: 1px;
-    word-break: break-all;
-    white-space: break-spaces;
-    caret-color: black;
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 0;
+  padding-right: 1em;
+  border-radius: 0 3px 3px 0;
+  border-right-width: 1px;
+  word-break: break-all;
+  white-space: break-spaces;
+  caret-color: black;
 }
 #input:focus {
-	outline: 0;
+  outline: 0;
 }
 @media (min-width: 900px) {
-    #welcome-screen {
-        width: 500px;
-    }
-    #container {
-        margin-left: 10vw;
-        margin-right: 10vw;
-    }
+  #welcome-screen {
+    width: 500px;
+  }
+  #container {
+    margin-left: 5vw;
+    margin-right: 5vw;
+  }
 }
