--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -11,7 +11,7 @@ header {
 #logo {
   filter: drop-shadow(0px 0.4em 0.1px rgba(0, 0, 0, 0.1));
   position: relative;
-  width: 8.9em;
+  height: 12.5em;
   z-index: 3;
 }
 #title-container {
